<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="ST_HeightTest_CMD" Id="{4d496361-9ba9-49a4-8634-427ac8386d77}">
    <Declaration><![CDATA[TYPE ST_HeightTest_CMD :
STRUCT
	
	Measurement1			: BOOL;		
	Measurement2			: BOOL;		
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>