<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="B_2_1_PRG_Master_Height_Test" Id="{a6876b43-7a04-4227-9137-3bf727782da0}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM B_2_1_PRG_Master_Height_Test

VAR

	rGoodStatistics						: R_TRIG;
	rBadStatistics						: R_TRIG;
	rEfficency							: STRING(510);

	bEventsFlag							: ARRAY [0..100] OF BOOL;
/////////////////////////////////////////////////////////////////////////////////////I O/////////////////////////////////////////////////////////////////////////////////////	
	
	bError								: BOOL;
	bReady								: BOOL;
	bPass								: BOOL;
	bFail								: BOOL;
	tonTakeMeasure						: TON;
	abMeaurement						: ARRAY [0..1] OF BOOL;
	bMeasurementDone					: BOOL;
	
	anDistances							: ARRAY[0..9] OF DINT;
	abDistancesResults					: ARRAY[0..9] OF BOOL;
	abProbeError						: ARRAY[0..10] OF BOOL;
	bGeneralError						: BOOL;
	anHeightProbe						: ARRAY[0..10] OF DINT;
	
	
	

	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[d_ACT_Set_Events_Station_2();
a_ACT_Ctrl_Station_2();
b_ACT_IO();
c_ACT_Statistics_Station_2();]]></ST>
    </Implementation>
    <Action Name="a_ACT_Ctrl_Station_2" Id="{c76df57f-a608-46ce-a480-681c36fd146a}">
      <Implementation>
        <ST><![CDATA[/////////////////////////////////////////////////////////////////////////////////////UTILITIES/////////////////////////////////////////////////////////////////////////////////////



/////////////////////////////////////////////////////////////////////////////////////CONDITIONS/////////////////////////////////////////////////////////////////////////////////////

CASE stHeightTests.State OF
	

	E_HeightTest_State.READY:
	
								IF stHeightTests.CMD.bExecute THEN
									
									stHeightTests.State			:= E_HeightTest_State.MEASURE;
								
								END_IF
		
	E_HeightTest_State.MEASURE:				
									
								IF stHeightTests.CMD.HeightTest_CMD.Measurement1 AND stHeightTests.CMD.HeightTest_CMD.Measurement2 THEN
										
									abMeaurement[0]			:= TRUE;
									abMeaurement[1]			:= TRUE;
									
								ELSIF stHeightTests.CMD.HeightTest_CMD.Measurement1 AND NOT stHeightTests.CMD.HeightTest_CMD.Measurement2 THEN
									
									abMeaurement[0]			:= TRUE;
									
								ELSIF NOT stHeightTests.CMD.HeightTest_CMD.Measurement1 AND stHeightTests.CMD.HeightTest_CMD.Measurement2 THEN
									
									abMeaurement[1]			:= TRUE;
									
								END_IF
									
								stHeightTests.State			:= E_HeightTest_State.WAIT_MEASUREMENT;
								
	E_HeightTest_State.WAIT_MEASUREMENT:						
								
								e_ACT_Measurement();
								
								IF bMeasurementDone THEN
			
									stHeightTests.State			:= E_HeightTest_State.DONE;
								
								END_IF
										
	E_HeightTest_State.DONE:
								IF  stLeakTesters.CMD.bAcknowledge THEN
									
									stLeakTesters.CMD.bAcknowledge := FALSE;
									stLeakTesters.State	:= E_LeakTester_State.RESULTS;
									
								END_IF	
								
	E_HeightTest_State.RESULTS:
								
								IF bPass[0] THEN
									
									stCycleData.stLeakTester_CycleData.bPass[0] := TRUE;
								
								ELSIF bFail[0] THEN
									
									stCycleData.stLeakTester_CycleData.bFail[0] := TRUE;
								
								END_IF
								
								IF bPass[1] THEN
									
									stCycleData.stLeakTester_CycleData.bPass[1] := TRUE;
								
								ELSIF bFail[1] THEN
									
									stCycleData.stLeakTester_CycleData.bFail[1] := TRUE;
								
								END_IF
								
	E_HeightTest_State.RESET:
	
								stCycleData.bPass				:= FALSE;
								stCycleData.bFail				:= FALSE;
								bStart[0]						:= FALSE;
								bStart[1]						:= FALSE;
								bReset[0]						:= FALSE;
								bReset[1]						:= FALSE;
								bStop[0]						:= FALSE;
								bStop[1]						:= FALSE;
								
								stLeakTesters.State				:= E_LeakTester_State.Ready;
								
	
	E_HeightTest_State.ERROR:
	
								IF NOT bError[0] AND bError[1] THEN
									
									stLeakTesters.State						:= E_LeakTester_State.ABORTED;
									
								END_IF

ELSE stLeakTesters.State := E_LeakTester_State.ABORTED;
	
END_CASE
/////////////////////////////////////////////////////////////////////////////////////STATUS/////////////////////////////////////////////////////////////////////////////////////

stLeakTesters.Status.bBusy	:= 	stLeakTesters.State = E_LeakTester_State.STOPPING OR
								stLeakTesters.State = E_LeakTester_State.HOMING OR
								stLeakTesters.State = E_LeakTester_State.RUN_LEAK_TESTERS OR
								stLeakTesters.State = E_LeakTester_State.WAIT_LEAK_TESTERS;

stLeakTesters.Status.bDone	:= 	stLeakTesters.State = E_LeakTester_State.DONE;

stLeakTesters.Status.bError	:= 	stLeakTesters.State = E_LeakTester_State.ERROR;	

stLeakTesters.Status.bReady	:=	stLeakTesters.State = E_LeakTester_State.READY;

stLeakTesters.Status.bStopped := NOT stLeakTesters.Status.bBusy;
]]></ST>
      </Implementation>
    </Action>
    <Action Name="b_ACT_IO" Id="{a6b5537d-697f-4c12-88a8-072e754bb70d}">
      <Implementation>
        <ST><![CDATA[	anDistances						:= Probes.anDistances;
	abProbeError					:= Probes.abProbeError;
	bGeneralError					:= Probes.bGeneralError;
	anHeightProbe					:= Probes.anHeightProbe;]]></ST>
      </Implementation>
    </Action>
    <Action Name="c_ACT_Statistics_Station_2" Id="{a944e097-f352-4ee2-9b3c-c47d97294856}">
      <Implementation>
        <ST><![CDATA[stStatisticsHMI[2].sName			:= 'Station 2';


rGoodStatistics( CLK := (stCycleDataStation2.bPass AND (eState = E_HeightTest_State.RESULTS)) OR bStatisticsTest[2]);
rBadStatistics( CLK := (stCycleDataStation2.bFail AND (eState = E_HeightTest_State.RESULTS)) OR bStatisticsTest[3]);

IF 	rGoodStatistics.Q THEN
	
	stStatisticsHMI[2].nGood		:= stStatisticsHMI[2].nGood + 1;
	stStatisticsHMI[2].nTotalGood	:= stStatisticsHMI[2].nTotalGood + 1;
	
END_IF
								
IF 	rBadStatistics.Q THEN
	
	stStatisticsHMI[2].nBad			:= stStatisticsHMI[2].nBad + 1;
	stStatisticsHMI[2].nTotalBad	:= stStatisticsHMI[2].nTotalBad + 1;
	
END_IF

IF stStatisticsHMI[2].bResetGood THEN
	stStatisticsHMI[2].nGood		:= 0;
END_IF

IF stStatisticsHMI[2].bResetBad THEN
	stStatisticsHMI[2].nBad			:= 0;
END_IF

IF (( stStatisticsHMI[2].nGood + stStatisticsHMI[2].nBad) <> 0) THEN
	
	rEfficency							:= LREAL_TO_FMTSTR(in := (DINT_TO_REAL(stStatisticsHMI[2].nGood) /( DINT_TO_REAL(stStatisticsHMI[2].nGood) + DINT_TO_REAL(stStatisticsHMI[2].nBad))) * 100.0,iPrecision := 2, bRound := TRUE);
	stStatisticsHMI[2].nEfficency		:= CONCAT(STR1 := '%', STR2 := (rEfficency));

ELSE stStatisticsHMI[2].nEfficency		:= CONCAT(STR1 := '%', STR2 := (DINT_TO_STRING(0)));
	
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="d_ACT_Set_Events_Station_2" Id="{6b5d796c-fea6-4e93-a1a0-85599a4684bc}">
      <Implementation>
        <ST><![CDATA[//IMMEDIATE FAULTS

stStationEvents[2].aEvents[0].bImmediateFault				:= TRUE;
stStationEvents[2].aEvents[0].bEventFlag					:= bEventsFlag[0];
stStationEvents[2].aEvents[0].bEventText					:= 'ST1 EVENT 0';
stStationEvents[2].aEvents[0].sSolution						:= 'Solution 3';


//CYCLE STOP FAULT

stStationEvents[2].aEvents[1].bCycleStopFault				:= TRUE;
stStationEvents[2].aEvents[1].bEventFlag					:= bEventsFlag[1];
stStationEvents[2].aEvents[1].bEventText					:= 'ST1 EVENT 1';
stStationEvents[2].aEvents[1].sSolution						:= 'Solution 4';


//CYCLE STOP REQUEST

stStationEvents[2].aEvents[2].bCycleStopRequest			:= TRUE;
stStationEvents[2].aEvents[2].bEventFlag					:= bEventsFlag[2];
stStationEvents[2].aEvents[2].bEventText					:= 'ST1 EVENT 2';]]></ST>
      </Implementation>
    </Action>
    <Action Name="e_ACT_Measurement" Id="{4c79a236-7589-4d28-bfec-9644f041c168}">
      <Implementation>
        <ST><![CDATA[tonTakeMeasure(IN:= stHeightTests.State = E_HeightTest_State.MEASURE, PT := T#5S);

IF tonTakeMeasure.Q THEN
	
	IF anDistances[0] 

END_IF]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="B_2_1_PRG_Master_Height_Test">
      <LineId Id="119" Count="2" />
      <LineId Id="41" Count="0" />
    </LineIds>
    <LineIds Name="B_2_1_PRG_Master_Height_Test.a_ACT_Ctrl_Station_2">
      <LineId Id="157" Count="0" />
      <LineId Id="159" Count="3" />
      <LineId Id="171" Count="2" />
      <LineId Id="187" Count="9" />
      <LineId Id="339" Count="0" />
      <LineId Id="344" Count="1" />
      <LineId Id="347" Count="0" />
      <LineId Id="349" Count="0" />
      <LineId Id="348" Count="0" />
      <LineId Id="350" Count="2" />
      <LineId Id="355" Count="0" />
      <LineId Id="357" Count="1" />
      <LineId Id="356" Count="0" />
      <LineId Id="353" Count="0" />
      <LineId Id="346" Count="0" />
      <LineId Id="341" Count="0" />
      <LineId Id="359" Count="1" />
      <LineId Id="342" Count="0" />
      <LineId Id="340" Count="0" />
      <LineId Id="336" Count="0" />
      <LineId Id="363" Count="0" />
      <LineId Id="361" Count="1" />
      <LineId Id="364" Count="2" />
      <LineId Id="247" Count="43" />
      <LineId Id="310" Count="25" />
      <LineId Id="95" Count="0" />
    </LineIds>
    <LineIds Name="B_2_1_PRG_Master_Height_Test.b_ACT_IO">
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="4" Count="0" />
    </LineIds>
    <LineIds Name="B_2_1_PRG_Master_Height_Test.c_ACT_Statistics_Station_2">
      <LineId Id="2" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="3" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="8" Count="2" />
      <LineId Id="19" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="20" Count="1" />
      <LineId Id="1" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="27" Count="2" />
      <LineId Id="26" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="47" Count="6" />
      <LineId Id="15" Count="0" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="B_2_1_PRG_Master_Height_Test.d_ACT_Set_Events_Station_2">
      <LineId Id="30" Count="19" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="B_2_1_PRG_Master_Height_Test.e_ACT_Measurement">
      <LineId Id="1" Count="0" />
      <LineId Id="3" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="4" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>